Colocando imagem do banner

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
 <html lang="pt-br">
-    <Head>
+    <head>
         <meta charset="UTF-8">
         <title>Barbearia Alura</title>
         <link rel="stylesheet" href="style.css">
-    </Head>
+    </head>
     <body>
         <h1>Sobre a Barbearia Alura</h1>
 
