--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <h1 class="titulo-principal">Barbearia Alura</h1>
         </header>
         
-        <img id="banner" src="banner.jpg"> 
+        <img id="banner" src="img/banner.jpg"> 
         <div class="principal">
             <h1 class="titulo-centralizado">Sobre a Barbearia Alura</h1>
 
@@ -30,7 +30,7 @@
                     <li class="itens">Localização</li>
                     <li class="itens">Profissionais qualificados</li>
                 </ul>
-                    <img src="beneficios.jpg" class="imagembeneficios" alt="Um homem grisalho na barbearia fazendo a barba">
+                    <img src="img/beneficios.jpg" class="imagembeneficios" alt="Um homem grisalho na barbearia fazendo a barba">
         </div>    
     </body>
 </html>
