--- a/Produtos.html
+++ b/Produtos.html
@@ -10,9 +10,9 @@
             <h1><img src="img/logo.png"></h1>
 
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Produtos</a></li>
-                <li><a href="">Contato</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Produtos.html">Produtos</a></li>
+                <li><a href="Contato.html">Contato</a></li>
             </ul>    
         </header>
         <main>
